RESOLVED FIXED238840
[PlayStation[ Fix build break after r292408
https://bugs.webkit.org/show_bug.cgi?id=238840
Summary [PlayStation[ Fix build break after r292408
Stephan Szabo
Reported 2022-04-05 14:53:45 PDT
Some playstation files also needed to change for the explicit constructor change.
Attachments
Build fix (4.93 KB, patch)
2022-04-05 14:57 PDT, Stephan Szabo
no flags
Stephan Szabo
Comment 1 2022-04-05 14:57:09 PDT
Created attachment 456750 [details] Build fix
EWS
Comment 2 2022-04-05 16:30:07 PDT
Committed r292440 (249293@main): <https://commits.webkit.org/249293@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 456750 [details].
Radar WebKit Bug Importer
Comment 3 2022-04-05 16:31:17 PDT
Note You need to log in before you can comment on or make changes to this bug.