[PlayStation[ Fix build break after r292408 https://bugs.webkit.org/show_bug.cgi?id=238840

Unreviewed build fix.


Source/WebCore:

* platform/LocalizedStrings.cpp:
* platform/network/playstation/CurlSSLHandlePlayStation.cpp:
* platform/playstation/UserAgentPlayStation.cpp:

Source/WebKit:

* UIProcess/API/C/playstation/WKPagePrivatePlayStation.cpp:

Canonical link: https://commits.webkit.org/249293@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292440 268f45cc-cd09-0410-ab3c-d52691b4dbfc